--- a/scss/partials/_dark.scss
+++ b/scss/partials/_dark.scss
@@ -146,6 +146,9 @@
                 background-color: white;
                 color: #37383C;
             }
+            .clock{
+                color: #FFFFFF;
+            }
         }
         .purple-line{
             background-color: white;
